@@ -2,5 +2,4 @@
 - Obtain appropriate repository defaults in Branch.get_parent() and 
   Branch.get_push_location()
 - Set proper text parents during fetch
-- Remove empty directories during fetch
 - Support roundtripping into Mercurial
